# 7Wonders

./: .gitignore  .ycm_extra_conf.py  7Wonders  7Wonders.cbp  CMakeCache.txt  CMakeLists.txt  Game.py  JsonGuide.js  JsonGuide.txt  LICENSE  README.md  cmake_install.cmake  guidelines.md  main.cpp  main_BACKUP_27919.cpp  main_BASE_27919.cpp  main_LOCAL_27919.cpp
.circleci/: config.yml
include/: card.h  deck.h  filer.h  game.h  messager.h  player.h  resources.h  wonder.h
references/: Game.asta  SPJ_7W.xlsx  cards.csv  cards_id.json  realtime.txt  time.txt  wonders.csv
references/time/: gabriel.txt  rafael (with rbIA).txt  rafael (without rbIA).txt
src/: card.cpp  deck.cpp  filer.cpp  game.cpp  messager.cpp  player.cpp  tests.cpp  wonder.cpp
test/: GUI.py  cards_id.json  game_status.json
